# ootpisip-y3s1

./: .clang-format  .project_styles_clion.xml
lab1/: CMakeLists.txt  ColorChanger.cpp  ColorChanger.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
lab2/: CMakeLists.txt  main.cpp  texteditor.cpp  texteditor.h  texteditor.qrc  texteditor.ui
lab3/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
lab3/tasks/: AdditionalTask.cpp  AdditionalTask.hpp  Task1.cpp  Task1.hpp  Task2.cpp  Task2.hpp  Task3.cpp  Task3.hpp  Task4.cpp  Task4.hpp  Task5.cpp  Task5.hpp  TaskWidget.cpp  TaskWidget.hpp
lab4/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
lab5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
lab7/: CMakeLists.txt  Snowflake.cpp  Snowflake.h  VerticalText.cpp  VerticalText.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab8/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task1.cpp  task1.h  task2.cpp  task2.h
